#32 Update prices to reflect multiple business units

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/BaseDataPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/BaseDataPage_da.utf8.properties
@@ -17,3 +17,5 @@ changes.has.been.saved=\u00C6ndringerne er blevet gemt
 legal.identification.to.long=CPR/CVR nummer for langt, max 25 karakterer
 address.to.long=Adressen er for lang, max 200 karakterer
 postal.code.to.long=Postnummeret for lang, max 20 karakterer
+
+new.billing.text=Husk det koster 30 eller 70 kr. om m\u00E5neden per juridisk enhed, afh\u00E6ngigt at dit forbrug.
