--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/BaseDataPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/BaseDataPage.utf8.properties
@@ -18,3 +18,5 @@ legal.identification.to.long=Legal identification is to long, max 25 character
 address.to.long=Address to long, max 200 character
 postal.code.to.long=Postal code to long, max 20 character
 
+new.billing.text=Remember it cost 5\u20AC or 10\u20AC per business unit depending on your usage
+
