#32 Update prices to reflect multiple business units

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/PricingPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/PricingPage.utf8.properties
@@ -11,7 +11,7 @@ info.text=Our prices er very reasonable, you only pay for your usage.<br><br>\
                       Postings per fiscal year\
                   </th>\
                   <th class="span2"> \
-                      Price\
+                      Price per business unit\
                   </th>\
               </tr>\
               <tr>\
