--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/PricingPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/PricingPage_da.utf8.properties
@@ -11,7 +11,7 @@ info.text=Vores priser er yderst rimelige, du betaler kun for dit forbrug. <br><
             Posteringer pr. regnskabs\u00E5r\
         </th>\
         <th class="span2"> \
-            Pris\
+            Pris pr. oprettet virksomhed\
         </th>\
     </tr>\
     <tr>\
