--- a/mainwar/pom.xml
+++ b/mainwar/pom.xml
@@ -14,13 +14,6 @@
 
     <dependencies>
 
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
-            <scope>provided</scope>
-        </dependency>
-
         <!--DB dependancies-->
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -312,6 +305,12 @@
                     <groupId>bouncycastle</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+        	<groupId>org.apache.tomcat</groupId>
+        	<artifactId>tomcat-catalina</artifactId>
+        	<version>7.0.35</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
