#38 Imply to users this is a beta test

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -1,5 +1,5 @@
 eazy.regnskab=Eazy accounting
-eazy.regnskab.brand=Eazy accounting
+eazy.regnskab.brand=Eazy accounting (beta)
 
 button.save=Save
 button.cancel=Cancel
