--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -1,5 +1,5 @@
 eazy.regnskab=Eazy regnskab
-eazy.regnskab.brand=Eazy regnskab
+eazy.regnskab.brand=Eazy regnskab (beta)
 
 button.save=Gem
 button.cancel=Fortryd
