--- a/mainwar/pom.xml
+++ b/mainwar/pom.xml
@@ -106,13 +106,12 @@
             <artifactId>javax.inject</artifactId>
             <version>1</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
             <version>${spring.version}</version>
-
         </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aspects</artifactId>
@@ -266,11 +265,6 @@
             <artifactId>commons-dbcp</artifactId>
             <version>1.4</version>
         </dependency>
-        <dependency>
-            <groupId>hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
-            <version>1.8.0.7</version>
-        </dependency>
 
         <!--Mail library-->
         <dependency>
@@ -306,11 +300,23 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!--Jetty-->
         <dependency>
-        	<groupId>org.apache.tomcat</groupId>
-        	<artifactId>tomcat-catalina</artifactId>
-        	<version>7.0.35</version>
-            <scope>provided</scope>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-webapp</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>dk.eazyit</groupId>
+            <artifactId>shared</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
@@ -326,7 +332,6 @@
                     <include>**/*.txt</include>
                 </includes>
             </resource>
-
 
             <!-- Wicket -->
             <resource>
