--- a/awsupload/pom.xml
+++ b/awsupload/pom.xml
@@ -22,9 +22,9 @@
 
         <!--Logging-->
         <dependency>
-        	<groupId>commons-logging</groupId>
-        	<artifactId>commons-logging</artifactId>
-        	<version>1.1.1</version>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>${commons-logging.version}</version>
         </dependency>
     </dependencies>
 
