--- a/pom.xml
+++ b/pom.xml
@@ -38,14 +38,43 @@
     <description>Eazy regnskab</description>
 
     <properties>
-        <wicket.version>6.5.0</wicket.version>
-        <hibernate.version>4.1.10.Final</hibernate.version>
-        <spring.version>3.1.3.RELEASE</spring.version>
-        <jetty.version>8.1.0.RC2</jetty.version>
-        <slf4j.version>1.7.2</slf4j.version>
+        <wicket.version>6.9.1</wicket.version>
         <wicket.bootstrap.version>0.8.4</wicket.bootstrap.version>
-        <logback.version>0.9.26</logback.version>
+        <com.vaynberg.wicket.select2.version>2.2.2</com.vaynberg.wicket.select2.version>
+        <wicket-spring-annot.version>1.3.7</wicket-spring-annot.version>
+        <hibernate.version>4.2.4.Final</hibernate.version>
+        <spring.version>3.2.4.RELEASE</spring.version>
+
         <jetty.version>8.1.12.v20130726</jetty.version>
+        <slf4j.version>1.7.5</slf4j.version>
+        <log4j.version>1.2.17</log4j.version>
+        <commons-logging.version>1.1.3</commons-logging.version>
+        <logback.version>1.0.13</logback.version>
+
+        <org.reflections.version>0.9.9-RC1</org.reflections.version>
+
+        <jetty.version>8.1.12.v20130726</jetty.version>
+        <javax.inject.version>1</javax.inject.version>
+
+        <commons-codec.version>1.8</commons-codec.version>
+        <commons-httpclient.version>3.1</commons-httpclient.version>
+        <commons-dbcp.version>1.4</commons-dbcp.version>
+
+        <joda-time.version>2.3</joda-time.version>
+        <com.google.code.typica.version>1.7.2</com.google.code.typica.version>
+
+        <javax.mail.version>1.4.7</javax.mail.version>
+
+        <mysql.version>5.1.26</mysql.version>
+
+        <cglib.version>2.2.2</cglib.version>
+
+        <junit.version>4.11</junit.version>
+        <org.mockito.version>1.9.5</org.mockito.version>
+        <org.hsqldb.version>2.3.0</org.hsqldb.version>
+
+        <net.bull.javamelody.version>1.46.0</net.bull.javamelody.version>
+        <com.lowagie.version>2.1.7</com.lowagie.version>
 
         <source.encoding>UTF-8</source.encoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
