--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -151,3 +151,25 @@ primo.posting=Primo posting
 nullValid=[Choose one]
 
 can.not.undo=Cannot be undone
+
+#ChartOfAccountsPage
+ChartOfAccountsPage.name=Name
+ChartOfAccountsPage.accountNumber=Account number
+ChartOfAccountsPage.vatType=VAT type
+ChartOfAccountsPage.financeAccountType=Account type
+ChartOfAccountsPage.standard.reverse.finance.account=Standard reverse account
+ChartOfAccountsPage.sum.from.to=Suminterval
+ChartOfAccountsPage.locked=Locked
+ChartOfAccountsPage.sum.from=Sum from
+ChartOfAccountsPage.sumFrom=Sum from
+ChartOfAccountsPage.sum.to=Sum to
+ChartOfAccountsPage.sumTo=Sum to
+
+ChartOfAccountsPage.finance.account.was.deleted=Finance account was deleted
+ChartOfAccountsPage.finance.account.is.in.use=Finance account is in use, and cannot be deleted
+ChartOfAccountsPage.changes.has.been.saved=Changes have been saved
+ChartOfAccountsPage.finance.account.was.never.saved=Finance account was never saved
+ChartOfAccountsPage.number.all.ready.exists=Account number allready exists
+ChartOfAccountsPage.number.to.long=Account number to long
+
+ChartOfAccountsPage.datatable.export-file-name=Finance accounts
