--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -158,4 +158,24 @@ nullValid=[V\u00E6lg en]
 
 can.not.undo=Kan ikke fortrydes
 
+#ChartOfAccountsPage
+ChartOfAccountsPage.name=Navn
+ChartOfAccountsPage.accountNumber=Kontonummer
+ChartOfAccountsPage.vatType=Momstype
+ChartOfAccountsPage.financeAccountType=Kontotype
+ChartOfAccountsPage.standard.reverse.finance.account=Standard modkonto
+ChartOfAccountsPage.sum.from.to=Sum interval
+ChartOfAccountsPage.locked=L\u00E5st
+ChartOfAccountsPage.sum.from=Sum fra
+ChartOfAccountsPage.sumFrom=Sum fra
+ChartOfAccountsPage.sum.to=Sum til
+ChartOfAccountsPage.sumTo=Sum til
 
+ChartOfAccountsPage.finance.account.was.deleted=Finanskontoen blev slettet
+ChartOfAccountsPage.finance.account.is.in.use=Finanskontoen er i brug og kan ikke slettes.
+ChartOfAccountsPage.changes.has.been.saved=\u00C6ndringerne er blevet gemt
+ChartOfAccountsPage.finance.account.was.never.saved=Finanskontoen var ikke gemt
+ChartOfAccountsPage.number.all.ready.exists=Kontonummer allerede er i brug
+ChartOfAccountsPage.number.to.long=Kontonummer er for langt
+
+ChartOfAccountsPage.datatable.export-file-name=Finanskonti
