--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,9 @@
         <hibernate.version>4.2.4.Final</hibernate.version>
         <spring.version>3.2.4.RELEASE</spring.version>
 
+        <pdfbox.version>1.8.2</pdfbox.version>
+        <jexcelapi.version>2.6.12</jexcelapi.version>
+
         <jetty.version>8.1.12.v20130726</jetty.version>
         <slf4j.version>1.7.5</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
@@ -88,10 +91,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.0</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                     <encoding>${source.encoding}</encoding>
                 </configuration>
             </plugin>
