#47 Export basedata & Dailyledger

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -152,7 +152,7 @@ nullValid=[Choose one]
 
 can.not.undo=Cannot be undone
 
-#ChartOfAccountsPage
+#ChartOfAccountsPage -------------------------------------------------------------------------
 ChartOfAccountsPage.name=Name
 ChartOfAccountsPage.accountNumber=Account number
 ChartOfAccountsPage.vatType=VAT type
@@ -173,3 +173,15 @@ ChartOfAccountsPage.number.all.ready.exists=Account number allready exists
 ChartOfAccountsPage.number.to.long=Account number to long
 
 ChartOfAccountsPage.datatable.export-file-name=Finance accounts
+
+#DailyLedgerPage -------------------------------------------------------------------------
+DailyLedgerPage.datatable.export-file-name=Daily ledgers
+
+#FiscalYearPage -------------------------------------------------------------------------
+FiscalYearPage.datatable.export-file-name=Fiscal years
+
+#VatTypesPage -------------------------------------------------------------------------
+VatTypesPage.datatable.export-file-name=Vat types
+
+#BookkeepingPage -------------------------------------------------------------------------
+BookkeepingPage.datatable.export-file-name=Daily Ledger
