--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -179,3 +179,15 @@ ChartOfAccountsPage.number.all.ready.exists=Kontonummer allerede er i brug
 ChartOfAccountsPage.number.to.long=Kontonummer er for langt
 
 ChartOfAccountsPage.datatable.export-file-name=Finanskonti
+
+#DailyLedgerPage
+DailyLedgerPage.datatable.export-file-name=Kasseklader
+
+#FiscalYearPage
+FiscalYearPage.datatable.export-file-name=Regnskabs\u00E5r
+
+#VatTypesPage
+VatTypesPage.datatable.export-file-name=Momstyper
+
+#BookkeepingPage -------------------------------------------------------------------------
+BookkeepingPage.datatable.export-file-name=Kasseklade
