#45 Move translations to main properties file for pages with exportable datatable

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -152,7 +152,20 @@ nullValid=[Choose one]
 
 can.not.undo=Cannot be undone
 
-#ChartOfAccountsPage -------------------------------------------------------------------------
+#Required Form elements -----------------------------------------------------------------------------------------------------------------------------
+name.Required=Name is mandatory
+accountNumber.Required=Account number is mandatory
+financeAccountType..Required=Account type is mandatory
+percentage.Required=Percentage is mandatory
+financeAccount.Required=Finance account is mandatory
+financeAccountReverse.Required=Reverse finance account is mandatory
+start.Required=Start date is mandatory
+end.Required=End date is mandatory
+date.Required=Date is mandatory
+amount.Required=Amount is mandatory
+text.Required=Text is mandatory
+
+#ChartOfAccountsPage -----------------------------------------------------------------------------------------------------------------------
 ChartOfAccountsPage.name=Name
 ChartOfAccountsPage.accountNumber=Account number
 ChartOfAccountsPage.vatType=VAT type
@@ -174,14 +187,108 @@ ChartOfAccountsPage.number.to.long=Account number to long
 
 ChartOfAccountsPage.datatable.export-file-name=Finance accounts
 
-#DailyLedgerPage -------------------------------------------------------------------------
+#DailyLedgerPage-----------------------------------------------------------------------------------------------------------------------
 DailyLedgerPage.datatable.export-file-name=Daily ledgers
 
-#FiscalYearPage -------------------------------------------------------------------------
+DailyLedgerPage.name=Name
+DailyLedgerPage.action=Action
+DailyLedgerPage.new.ledger=New ledger
+
+DailyLedgerPage.daily.ledger.was.deleted=Daily ledger was deleted
+DailyLedgerPage.daily.ledger.is.in.use=Daily ledger is in use or is the last left, and cannot be deleted
+DailyLedgerPage.changes.has.been.saved=Changes have been saved
+DailyLedgerPage.daily.ledger.was.never.saved=Daily ledger was never saved
+
+DailyLedgerPage.name.all.ready.exists=Name is allready in use
+DailyLedgerPage.name.to.long=Name is to long
+
+DailyLedgerPage.nextBookingNumber=Next booking number
+
+DailyLedgerPage.financeAccount=Standard reverse finance account
+
+
+#FiscalYearPage -----------------------------------------------------------------------------------------------------------------------
 FiscalYearPage.datatable.export-file-name=Fiscal years
 
-#VatTypesPage -------------------------------------------------------------------------
+FiscalYearPage.start=Start date
+FiscalYearPage.end=End date
+
+FiscalYearPage.fiscal.year.was.deleted=Fiscal year was deleted
+FiscalYearPage.fiscal.year.is.in.use==Fiscal year contains postings
+FiscalYearPage.fiscal.year.was.never.saved=Fiscal year was never saved
+FiscalYearPage.changes.has.been.saved=Changes have been saved
+FiscalYearPage.fiscal.year.dates.are.in.use=The fiscal year contains postings in the old dates
+
+FiscalYearPage.start.date.must.be.before.end.date=Start date must be before end date
+FiscalYearPage.dates.cross.another.fiscal.year=Dates cross another fiscal year
+FiscalYearPage.year.must.be.after.last.year=
+FiscalYearPage.can.only.open.if.next.open=Can only open if next year is open
+FiscalYearPage.can.only.close.if.previous.closed=Can only closed if previous is closed
+FiscalYearPage.next.fiscal.year.not.found=Next fiscal year not found
+
+FiscalYearPage.year.opened=Year opened
+FiscalYearPage.year.closed=Year closed
+
+FiscalYearPage.daysBetween=Days in year
+
+FiscalYearPage.action=Action
+
+
+#VatTypesPage -----------------------------------------------------------------------------------------------------------------------
 VatTypesPage.datatable.export-file-name=Vat types
 
-#BookkeepingPage -------------------------------------------------------------------------
+VatTypesPage.name=Name
+VatTypesPage.percentage=Percentage
+VatTypesPage.financeAccount=Finance account for VAT
+VatTypesPage.finance.account=Finance account for VAT
+VatTypesPage.financeAccountReverse=Reverse finance account for VAT
+VatTypesPage.finance.account.reverse=Reverse finance account for VAT
+
+action=Action
+
+VatTypesPage.vat.type.was.deleted=Vat type was deleted
+VatTypesPage.vat.type.is.in.use=Vat type is in use, and cannot be deleted
+VatTypesPage.changes.has.been.saved=Changes have been saved
+VatTypesPage.vat.type.was.never.saved=Vat type was never saved
+
+VatTypesPage.name.all.ready.exists=Name is all ready in use
+VatTypesPage.name.to.long=Name is to long
+
+#BookkeepingPage -----------------------------------------------------------------------------------------------------------------------
 BookkeepingPage.datatable.export-file-name=Daily Ledger
+
+BookkeepingPage.daily.ledger=Daily ledgers
+BookkeepingPage.action=Action
+
+BookkeepingPage.button.save=Save posting
+BookkeepingPage.button.book.chosen=Book chosen postings
+BookkeepingPage.button.book.all=Book all postings in daily ledger
+
+BookkeepingPage.date=Date
+BookkeepingPage.financeAccount=Finance account
+BookkeepingPage.finance.account.reverse=Reverse finance account
+BookkeepingPage.amount=Amount
+BookkeepingPage.vatType=Vat type
+BookkeepingPage.reverseVatType=Vat type
+BookkeepingPage.vatAmount=Vat amount
+BookkeepingPage.text=Description
+BookkeepingPage.bookingNumber=Booking number
+BookkeepingPage.chose=Chose
+
+BookkeepingPage.finance.posting.BookkeepingPage.was.deleted=Finance posting was deleted
+
+BookkeepingPage.must.chose.one.finance.account=You must choose one finance account
+BookkeepingPage.text.to.long=Text to long, maximum is 50 character
+BookkeepingPage.must.choose.account.for.vat=If you choose a vattype you must also choose a finance account
+
+BookkeepingPage.following.postings.did.not.balance=The following finance postings did not balance {0}
+BookkeepingPage.following.postings.where.not.in.open.fiscal.year=The following finance postings are not in a open fiscal year {0}
+
+BookkeepingPage.finance.postings.where.booked=Finance postings where booked
+
+BookkeepingPage.datatable.no-records-found=No postings in daily ledger
+
+BookkeepingPage.reverse.account.is.locked=Reverse account is locked
+BookkeepingPage.account.is.locked=Account is locked
+
+BookkeepingPage.do.you.want.clear.daily.ledger=Are you sure you want to clear daily ledger?
