--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -158,7 +158,21 @@ nullValid=[V\u00E6lg en]
 
 can.not.undo=Kan ikke fortrydes
 
-#ChartOfAccountsPage
+#Required Form elements -----------------------------------------------------------------------------------------------------------------------------
+name.Required=Navn er obligatorisk
+accountNumber.Required=Kontonummer er obligatorisk
+financeAccountType..Required=Kontotype er obligatorisk
+percentage.Required=Procentsats er obligatorisk
+financeAccount.Required=Finanskonto er obligatorisk
+financeAccountReverse.Required=Modsat finanskonto er obligatorisk
+start.Required=Start dato er obligatorisk
+end.Required=Slut dato er obligatorisk
+date.Required=Date er obligatorisk
+amount.Required=Bel\u00F8b er obligatorisk
+text.Required=Tekst er obligatorisk
+
+
+#ChartOfAccountsPage -----------------------------------------------------------------------------------------------------------------------
 ChartOfAccountsPage.name=Navn
 ChartOfAccountsPage.accountNumber=Kontonummer
 ChartOfAccountsPage.vatType=Momstype
@@ -180,14 +194,106 @@ ChartOfAccountsPage.number.to.long=Kontonummer er for langt
 
 ChartOfAccountsPage.datatable.export-file-name=Finanskonti
 
-#DailyLedgerPage
+#DailyLedgerPage -----------------------------------------------------------------------------------------------------------------------
 DailyLedgerPage.datatable.export-file-name=Kasseklader
 
-#FiscalYearPage
+DailyLedgerPage.name=Navn
+DailyLedgerPage.action=Handling
+DailyLedgerPage.new.ledger=Ny kasseklade
+
+DailyLedgerPage.daily.ledger.was.deleted=Kassekladen blev slettet
+DailyLedgerPage.daily.ledger.is.in.use=Kassekladen er i brug eller er den sidste tilbage, og kan ikke slettes.
+DailyLedgerPage.changes.has.been.saved=\u00C6ndringerne er blevet gemt
+DailyLedgerPage.daily.ledger.was.never.saved=Kassekladen var ikke gemt
+
+DailyLedgerPage.name.all.ready.exists=Navnet er allerede i brug
+DailyLedgerPage.name.to.long=Navnet er for langt
+
+DailyLedgerPage.nextBookingNumber=N\u00E6ste bilagsnummer
+
+DailyLedgerPage.financeAccount=Standard modkonto
+
+#FiscalYearPage -----------------------------------------------------------------------------------------------------------------------
 FiscalYearPage.datatable.export-file-name=Regnskabs\u00E5r
 
-#VatTypesPage
+FiscalYearPage.start=Start dato
+FiscalYearPage.end=Slut dato
+
+FiscalYearPage.fiscal.year.was.deleted=Regnskabs\u00E5ret blev slettet
+FiscalYearPage.fiscal.year.is.in.use=Regnskabs\u00E5ret indeholder posteringer
+FiscalYearPage.fiscal.year.was.never.saved=Regnskabs\u00E5ret var aldrig gemt
+FiscalYearPage.changes.has.been.saved=\u00C6ndringerne er blevet gemt
+FiscalYearPage.fiscal.year.dates.are.in.use=Regnskabs\u00E5ret indeholder posteringer i de gamle datoer
+
+FiscalYearPage.start.date.must.be.before.end.date=Start dato skal v\u00E6re f\u00F8r slut dato
+FiscalYearPage.dates.cross.another.fiscal.year=Datoerne krydser et eksisterende \u00E5r
+FiscalYearPage.year.must.be.after.last.year=TODO
+FiscalYearPage.can.only.open.if.next.open=Kan kun \u00E5bne hvis det n\u00E6ste regnskabs\u00E5r er \u00E5bent
+FiscalYearPage.can.only.close.if.previous.closed=Kan kun lukke hvis det forrige regnskabs\u00E5r er lukket
+FiscalYearPage.next.fiscal.year.not.found=N\u00E6ste regnskabs\u00E5r kunne ikke findes.
+
+FiscalYearPage.year.opened=\u00C5r \u00E5bnet
+FiscalYearPage.year.closed=\u00C5r lukket
+
+FiscalYearPage.daysBetween=Dage i \u00E5ret
+
+FiscalYearPage.action=Handling
+
+#VatTypesPage -----------------------------------------------------------------------------------------------------------------------
 VatTypesPage.datatable.export-file-name=Momstyper
 
-#BookkeepingPage -------------------------------------------------------------------------
+VatTypesPage.name=Navn
+VatTypesPage.percentage=Procentsats
+VatTypesPage.finance.account=Finanskonto til moms
+VatTypesPage.financeAccount=Finanskonto til moms
+VatTypesPage.finance.account.reverse=Modfinanskonto til moms
+VatTypesPage.financeAccountReverse=Modfinanskonto til moms
+
+VatTypesPage.action=Handling
+
+VatTypesPage.vat.type.was.deleted=Momsops\u00E6tning blev slettet
+VatTypesPage.vat.type.is.in.use=Momsops\u00E6tningen er i brug og kan ikke slettes.
+VatTypesPage.changes.has.been.saved=\u00C6ndringerne er blevet gemt
+VatTypesPage.vat.type.was.never.saved=Momsops\u00E6tningen var ikke gemt
+
+VatTypesPage.name.all.ready.exists=Navnet er allerede i brug
+VatTypesPage.name.to.long=Navnet er for langt
+
+#BookkeepingPage -----------------------------------------------------------------------------------------------------------------------
 BookkeepingPage.datatable.export-file-name=Kasseklade
+
+BookkeepingPage.daily.ledger=Kasseklader
+BookkeepingPage.action=Handling
+
+BookkeepingPage.button.save=Gem postering
+BookkeepingPage.button.book.chosen=Bogf\u00F8r valgte posteringer
+BookkeepingPage.button.book.all=Bogf\u00F8r alle posteringer i klade
+
+BookkeepingPage.date=Dato
+BookkeepingPage.financeAccount=Finanskonto
+BookkeepingPage.finance.account.reverse=Modkonto
+BookkeepingPage.amount=Bel\u00F8b
+BookkeepingPage.vatType=Momstype
+BookkeepingPage.reverseVatType=Momstype
+BookkeepingPage.text=Posteringstekst
+BookkeepingPage.vatAmount=Moms bel\u00F8b
+BookkeepingPage.bookingNumber=Bilagsnummer
+BookkeepingPage.chose=V\u00E6lg
+
+BookkeepingPage.finance.posting.was.deleted=Bilaget blev slettet
+
+BookkeepingPage.must.chose.one.finance.account=Du skal v\u00E6lge en finanskonto
+BookkeepingPage.text.to.long=Teksten er for lang, max 50 bogstaver
+BookkeepingPage.must.choose.account.for.vat=Hvis du v\u00E6lger momstype, skal du ogs\u00E5 v\u00E6lge en finanskonto
+
+BookkeepingPage.following.postings.did.not.balance=De f\u00F8lgende posteringer stemte ikke {0}
+BookkeepingPage.following.postings.where.not.in.open.fiscal.year=De f\u00F8lgende posteringer er ikke i et \u00E5bent regnskabs\u00E5r {0}
+
+BookkeepingPage.finance.postings.where.booked=Finansposteringer er blevet bogf\u00F8rt
+
+BookkeepingPage.datatable.no-records-found=Ingen posteringer i kasseklade
+
+BookkeepingPage.reverse.account.is.locked=Modsat konto er l\u00E5st
+BookkeepingPage.account.is.locked=Konto er l\u00E5st
+
+BookkeepingPage.do.you.want.clear.daily.ledger=Er du sikker p\u00E5 du vil slette alle posteringer i kladden?
