--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
@@ -1,37 +1,4 @@
 title=Bogf\u00F8ring
 description=Her kan du oprette og redigere finansposteringer
-daily.ledger=Kasseklader
-action=Handling
 
-button.save=Gem postering
-button.book.chosen=Bogf\u00F8r valgte posteringer
-button.book.all=Bogf\u00F8r alle posteringer i klade
-
-date=Dato
-financeAccount=Finanskonto
-finance.account.reverse=Modkonto
-amount=Bel\u00F8b
-vatType=Momstype
-reverseVatType=Momstype
-text=Posteringstekst
-vatAmount=Moms bel\u00F8b
-bookingNumber=Bilagsnummer
-chose=V\u00E6lg
-
-finance.posting.was.deleted=Bilaget blev slettet
-
-must.chose.one.finance.account=Du skal v\u00E6lge en finanskonto
-text.to.long=Teksten er for lang, max 50 bogstaver
-must.choose.account.for.vat=Hvis du v\u00E6lger momstype, skal du ogs\u00E5 v\u00E6lge en finanskonto
-
-following.postings.did.not.balance=De f\u00F8lgende posteringer stemte ikke {0}
-following.postings.where.not.in.open.fiscal.year=De f\u00F8lgende posteringer er ikke i et \u00E5bent regnskabs\u00E5r {0}
-
-finance.postings.where.booked=Finansposteringer er blevet bogf\u00F8rt
-
-datatable.no-records-found=Ingen posteringer i kasseklade
-
-reverse.account.is.locked=Modsat konto er l\u00E5st
-account.is.locked=Konto er l\u00E5st
-
-do.you.want.clear.daily.ledger=Er du sikker p\u00E5 du vil slette alle posteringer i kladden?
+datatable.no-records-found=Ingen kladeposteringer i kladden
