#30 Ingen konti fundet med de valgte argumenter - vises selv om der er konti

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -292,3 +292,5 @@ BookkeepingPage.reverse.account.is.locked=Reverse account is locked
 BookkeepingPage.account.is.locked=Account is locked
 
 BookkeepingPage.do.you.want.clear.daily.ledger=Are you sure you want to clear daily ledger?
+
+BookkeepingPage.button.clear.daily.ledger=Clear ledger
