--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -297,3 +297,5 @@ BookkeepingPage.reverse.account.is.locked=Modsat konto er l\u00E5st
 BookkeepingPage.account.is.locked=Konto er l\u00E5st
 
 BookkeepingPage.do.you.want.clear.daily.ledger=Er du sikker p\u00E5 du vil slette alle posteringer i kladden?
+
+BookkeepingPage.button.clear.daily.ledger=Ryd kassekladden
