#46 Balance and Finance account reports should use datatable to display data

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -1,6 +1,8 @@
 eazy.regnskab=Eazy regnskab
 eazy.regnskab.brand=Eazy regnskab (beta)
 
+#Buttons ----------------------------------------------------------------------------------------------------------------------------------------------------------
+
 button.save=Gem
 button.cancel=Fortryd
 button.edit=Rediger
@@ -14,6 +16,8 @@ button.close=Luk
 button.clear.daily.ledger=Ryd kassekladen
 button.yes=Ja
 button.no=Nej
+
+
 
 modal.title.confirm=Bekr\u00E6ft
 
@@ -299,3 +303,36 @@ BookkeepingPage.account.is.locked=Konto er l\u00E5st
 BookkeepingPage.do.you.want.clear.daily.ledger=Er du sikker p\u00E5 du vil slette alle posteringer i kladden?
 
 BookkeepingPage.button.clear.daily.ledger=Ryd kassekladden
+
+
+#BaseReportForm --------------------------------------------------------------------------------------------------------------------
+
+dateFrom=Fra dato
+dateTo=Til dato
+accountFrom=Fra konto
+accountTo=Til konto
+
+minus.one.year=Et \u00E5r tilbage
+plus.one.year=Et \u00E5r frem
+
+#BalancePage -----------------------------------------------------------------------------------------------------------------------
+
+BalancePage.account.number=Nummer
+BalancePage.account.name=Navn
+BalancePage.account.sum=Periode
+BalancePage.account.sum.compare=Periode sidste \u00E5r
+
+BalancePage.dateFrom=Fra dato
+BalancePage.dateTo=Til dato
+BalancePage.accountFrom=Fra konto
+BalancePage.accountTo=Til konto
+
+BalancePage.compare.to=Sammenlign med
+BalancePage.hide.accounts.without.sum=Skjul konti uden sum
+
+BalancePage.plus.one.year=N\u00E6ste \u00E5r samme interval
+BalancePage.minus.one.year=Forrige \u00E5r samme interval
+
+BalancePage.datatable.export-file-name=Balance
+
+BalancePage.dates.not.within.same.fiscal.year=Datoerne er ikke inden for det samme regnskabs\u00E5r
