--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -1,6 +1,8 @@
 eazy.regnskab=Eazy accounting
 eazy.regnskab.brand=Eazy accounting (beta)
 
+#Buttons ----------------------------------------------------------------------------------------------------------------------------------------------------------
+
 button.save=Save
 button.cancel=Cancel
 button.edit=Edit
@@ -294,3 +296,32 @@ BookkeepingPage.account.is.locked=Account is locked
 BookkeepingPage.do.you.want.clear.daily.ledger=Are you sure you want to clear daily ledger?
 
 BookkeepingPage.button.clear.daily.ledger=Clear ledger
+
+#BaseReportForm ------------------------------------------------------------------------------------------------------------------
+
+dateFrom=From date
+dateTo=To date
+accountFrom=From account
+accountTo=To account
+
+minus.one.year=Minus one year
+plus.one.year=Plus one year
+
+#BalancePage -----------------------------------------------------------------------------------------------------------------------
+
+BalancePage.account.number=Number
+BalancePage.account.name=Name
+BalancePage.account.sum=Period
+BalancePage.account.sum.compare=Period same time last year
+
+BalancePage.dateFrom=From date
+BalancePage.dateTo=To date
+BalancePage.accountFrom=From account
+BalancePage.accountTo=To account
+
+compare.to=Compare to
+hide.accounts.without.sum=Hide accounts with 0 sum
+
+BalancePage.datatable.export-file-name=Balance
+
+dates.not.within.same.fiscal.year=Dates not within same fiscal year
