#49 Add header title to datatable exports

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -189,6 +189,8 @@ ChartOfAccountsPage.number.to.long=Account number to long
 
 ChartOfAccountsPage.datatable.export-file-name=Finance accounts
 
+ChartOfAccountsPage.report.title=Chart of accounts for: ${name}
+
 #DailyLedgerPage-----------------------------------------------------------------------------------------------------------------------
 DailyLedgerPage.datatable.export-file-name=Daily ledgers
 
@@ -207,6 +209,8 @@ DailyLedgerPage.name.to.long=Name is to long
 DailyLedgerPage.nextBookingNumber=Next booking number
 
 DailyLedgerPage.financeAccount=Standard reverse finance account
+
+DailyLedgerPage.report.title=Daily ledgers for: ${name}
 
 
 #FiscalYearPage -----------------------------------------------------------------------------------------------------------------------
@@ -235,6 +239,8 @@ FiscalYearPage.daysBetween=Days in year
 
 FiscalYearPage.action=Action
 
+FiscalYearPage.report.title=Fiscal years for: ${name}
+
 
 #VatTypesPage -----------------------------------------------------------------------------------------------------------------------
 VatTypesPage.datatable.export-file-name=Vat types
@@ -255,6 +261,8 @@ VatTypesPage.vat.type.was.never.saved=Vat type was never saved
 
 VatTypesPage.name.all.ready.exists=Name is all ready in use
 VatTypesPage.name.to.long=Name is to long
+
+VatTypesPage.report.title=VAT types for: ${name}
 
 #BookkeepingPage -----------------------------------------------------------------------------------------------------------------------
 BookkeepingPage.datatable.export-file-name=Daily Ledger
@@ -297,6 +305,8 @@ BookkeepingPage.do.you.want.clear.daily.ledger=Are you sure you want to clear da
 
 BookkeepingPage.button.clear.daily.ledger=Clear ledger
 
+BookkeepingPage.report.title=Dailyledger for: ${name}
+
 #BaseReportForm ------------------------------------------------------------------------------------------------------------------
 
 dateFrom=From date
@@ -319,9 +329,11 @@ BalancePage.dateTo=To date
 BalancePage.accountFrom=From account
 BalancePage.accountTo=To account
 
-compare.to=Compare to
-hide.accounts.without.sum=Hide accounts with 0 sum
+BalancePage.compare.to=Compare to
+BalancePage.hide.accounts.without.sum=Hide accounts with 0 sum
 
 BalancePage.datatable.export-file-name=Balance
 
-dates.not.within.same.fiscal.year=Dates not within same fiscal year
+BalancePage.dates.not.within.same.fiscal.year=Dates not within same fiscal year
+
+BalancePage.report.title= | Balance from ${dateFrom} to ${dateTo} | Accounts ${accountFrom.accountNumber} - ${AccountTo.accountNumber}
