--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -198,6 +198,8 @@ ChartOfAccountsPage.number.to.long=Kontonummer er for langt
 
 ChartOfAccountsPage.datatable.export-file-name=Finanskonti
 
+ChartOfAccountsPage.report.title=Kontoplan for: ${name}
+
 #DailyLedgerPage -----------------------------------------------------------------------------------------------------------------------
 DailyLedgerPage.datatable.export-file-name=Kasseklader
 
@@ -216,6 +218,8 @@ DailyLedgerPage.name.to.long=Navnet er for langt
 DailyLedgerPage.nextBookingNumber=N\u00E6ste bilagsnummer
 
 DailyLedgerPage.financeAccount=Standard modkonto
+
+DailyLedgerPage.report.title=Kasseklader for: ${name}
 
 #FiscalYearPage -----------------------------------------------------------------------------------------------------------------------
 FiscalYearPage.datatable.export-file-name=Regnskabs\u00E5r
@@ -243,6 +247,8 @@ FiscalYearPage.daysBetween=Dage i \u00E5ret
 
 FiscalYearPage.action=Handling
 
+FiscalYearPage.report.title=Regnskabs\u00E5r for: ${name}
+
 #VatTypesPage -----------------------------------------------------------------------------------------------------------------------
 VatTypesPage.datatable.export-file-name=Momstyper
 
@@ -262,6 +268,8 @@ VatTypesPage.vat.type.was.never.saved=Momsops\u00E6tningen var ikke gemt
 
 VatTypesPage.name.all.ready.exists=Navnet er allerede i brug
 VatTypesPage.name.to.long=Navnet er for langt
+
+VatTypesPage.report.title=Momstyper for: ${name}
 
 #BookkeepingPage -----------------------------------------------------------------------------------------------------------------------
 BookkeepingPage.datatable.export-file-name=Kasseklade
@@ -304,6 +312,7 @@ BookkeepingPage.do.you.want.clear.daily.ledger=Er du sikker p\u00E5 du vil slett
 
 BookkeepingPage.button.clear.daily.ledger=Ryd kassekladden
 
+BookkeepingPage.report.title=Kassekladde for: ${name}
 
 #BaseReportForm --------------------------------------------------------------------------------------------------------------------
 
@@ -336,3 +345,5 @@ BalancePage.minus.one.year=Forrige \u00E5r samme interval
 BalancePage.datatable.export-file-name=Balance
 
 BalancePage.dates.not.within.same.fiscal.year=Datoerne er ikke inden for det samme regnskabs\u00E5r
+
+BalancePage.report.title= | Balance fra ${dateFrom} til ${dateTo} | Konti ${accountFrom.accountNumber} - ${AccountTo.accountNumber}
